Linking css.html

--- a/home.html
+++ b/home.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang='en'>
+    <head>
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <title>Nia's Christmas Calendar</title>
+    <link rel='stylesheet' href='calendarstyle.css'>
+</head>
 
 
 <div class="calendar-grid">
