--- a/home.html
+++ b/home.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang='en'>
+   
+
     <head>
+
+      <link rel="icon" type="image/x-icon" href="snowflake.png">
+        
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Nia's Christmas Calendar</title>
