--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 
     <head>
 
-    <link rel="icon" type="image/jpg" href="snowflake.jpg">
+    <link rel="icon" type="image/jpg" href="newsnowflake.png">
         
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
