--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
         <span class='close' onclick='closePopup()'>&times;</span>
         <div id='popup-content'></div>
     </div>
-    <script src='script.js'></script>
+    <script src='calendar.js'></script>
 </body>
 </html>
 
