adding header photo.html

--- a/home.html
+++ b/home.html
@@ -13,9 +13,16 @@
 </head>
 
 <body>
-    
+
+
+   <header>
+  <div class="calendarlogo-container">
+    <img src="headercalendar.png" alt="Nia's Christmas Calendar" class="logo">
+  </div>
+</header>
+
     <div class= subtext>  
-    <h1>Nia's Christmas Calendar</h1>
+ 
        <p>Here is a little Christmas calendar I made for you, love ya ❤️</p>
     </div>
         <div class='calendar'>
