--- a/home.html
+++ b/home.html
@@ -12,6 +12,21 @@
         <div class="calendarlogo-container">
             <img src="headercalendar.png" alt="Nia's Christmas Calendar" class="logo">
         </div>
+
+        
+  <div class="logo" id="menuToggle">
+    <img src="newsnowflake.png" alt="Logo">
+  </div>
+  <nav class="nav-menu" id="navMenu">
+    <ul>
+      <li><a href="#home">Calendar</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+
     </header>
 
     <div class="subtext">  
