--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         </div>
 
         
-  <div class="logo" id="menuToggle">
+  <div class="menu" id="menuToggle">
     <img src="newsnowflake.png" alt="Logo">
   </div>
   <nav class="nav-menu" id="navMenu">
