--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="parallax">
         <div class="title">
-            <img src="/users/niadurna/Documents/-/Christmas calendar/IMG_2179.JPG" alt="Your Name">
+            <img src="IMG_2179.jpg" alt="Your Name">
 
             <div class="text-overlay">
                 <h1>Welcome to Our Website</h1>
