--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <!-- Tagline Section -->
 <section class="tagline">
-    <h1>WE CREATE EXPERIENCES THAT GET YOU NOTICED AND HELP YOU GROW</h1>
+    <h1>I CREATE DESIGNS THAT GET YOU NOTICED</h1>
 </section>
 
 
