--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="IMG_2179.jpg" alt="Your Name">
 
             <div class="text-overlay">
-                <h1>Welcome to Our Website</h1>
-                <p>Scroll down for more</p>
+                <h1>Welcome to my Portfolio</h1>
+               
             </div>
         </div>
     </div>
@@ -35,8 +35,7 @@
     <main>
         <section id="home">
             <h1>Your Name</h1>
-            <p>Web Developer & Designer</p>
-            <img src="your-image.jpg" alt="Your Name">
+            <p>Aspiring Web Developer & Designer</p>
         </section>
 
         <section id="about">
@@ -72,9 +71,14 @@
 </section>
 
 <!-- Tagline Section -->
+
+<br>
+<br>
 <section class="tagline">
     <h1>I CREATE DESIGNS THAT GET YOU NOTICED</h1>
 </section>
+<br>
+<br>
 
 
        
