Adding some.html

--- a/index.html
+++ b/index.html
@@ -83,15 +83,21 @@
 
        
     </main>
+<footer>
+    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <div class="social-links">
+        <a href="linkedin.com/in/nia-durna-6947a9235" target="_blank">
+            <img src="LI.png" alt="LinkedIn" class="social-icon">
+        </a>
+        <a href="https://github.com/niaaled" target="_blank">
+            <img src="github.png" alt="GitHub" class="social-icon">
+        </a>
+        <a href="https://www.instagram.com/niaalexandraa/?hl=fi" target="_blank">
+            <img src="instagram.png" alt="Instagram" class="social-icon">
+        </a>
+    </div>
+</footer>
 
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-        <div class="social-links">
-            <a href="#" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">GitHub</a>
-            <a href="#" target="_blank">Twitter</a>
-        </div>
-    </footer>
 
   
       <script src="./portfolio.js"></script>
