--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,8 @@
                 </form>
           
         </section>
+
+        <div class="cursor" id="cursor"></div>
         
     </main>
 
