--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <footer>
     <p>&copy; 2024 Your Name. All rights reserved.</p>
     <div class="social-links">
-        <a href="linkedin.com/in/nia-durna-6947a9235" target="_blank">
+        <a href="https://linkedin.com/in/nia-durna-6947a9235" target="_blank">
             <img src="LI.png" alt="LinkedIn" class="social-icon">
         </a>
         <a href="https://github.com/niaaled" target="_blank">
