--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
        
     </main>
 <footer>
-    <p>&copy; 2024 Your Name. All rights reserved.</p>
+    <p>&copy; 2024 Nia Durna. All rights reserved.</p>
     <div class="social-links">
         <a href="https://linkedin.com/in/nia-durna-6947a9235" target="_blank">
             <img src="LI.png" alt="LinkedIn" class="social-icon">
