--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
     <main>
         <section id="home">
-            <h1>Your Name</h1>
+            <h1>Nia Durna</h1>
             <p>Aspiring Web Developer & Designer</p>
         </section>
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Write a brief introduction about yourself, your skills, and your professional journey.</p>
+            <p>Not a brief introduction about yourself, your skills, and your professional journey.</p>
          </section>
 
         
