--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Not a brief introduction about yourself, your skills, and your professional journey.</p>
+            <p>Currently working in tech sales but ambitious about becoming a develoepr.</p>
          </section>
 
         
