--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Currently working in tech sales but ambitious about becoming a develoepr.</p>
+            <p>Currently working in tech sales but ambitious about becoming a develoepr.
+            See below what I plan to offer.</p>
          </section>
 
         
