--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Currently working in tech sales but ambitious about becoming a develoepr.
+            <p>Currently working in tech sales but ambitious about becoming a developer.
             See below what I plan to offer.</p>
          </section>
 
