--- a/projects.html
+++ b/projects.html
@@ -36,39 +36,41 @@
 
 <section class="projects-container">
     <h1>My Projects</h1>
+    <br>
+    <br>
     <div class="projects-grid">
         <div class="project">
             <div class="project-image">
-                <img src="project1.jpg" alt="Project 1">
+                <img src="pool.jpg" alt="Hotel Costa Brava">
                 <div class="project-overlay">
-                    <h3>Project 1</h3>
+                    <h3>Hotel Costa Brava</h3>
                     <p>Coming Soon</p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class="project-image">
-                <img src="project2.jpg" alt="Project 2">
+                <img src="boat.jpg" alt="Lake Garda Boating">
                 <div class="project-overlay">
-                    <h3>Project 2</h3>
+                    <h3>Lake garda Boating</h3>
                     <p>Coming Soon</p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class="project-image">
-                <img src="project3.jpg" alt="Project 3">
+                <img src="ibiza.jpg" alt="Ibiza Apartments">
                 <div class="project-overlay">
-                    <h3>Project 3</h3>
+                    <h3>Ibiza Apartments</h3>
                     <p>Coming Soon</p>
                 </div>
             </div>
         </div>
         <div class="project">
             <div class="project-image">
-                <img src="project4.jpg" alt="Project 4">
+                <img src="project4.jpg" alt=" Cappadocia Cave Hotels">
                 <div class="project-overlay">
-                    <h3>Project 4</h3>
+                    <h3>Cappadocia Cav Hotels</h3>
                     <p>Coming Soon</p>
                 </div>
             </div>
@@ -97,10 +99,10 @@
 </footer>
 
 
+    <div class="cursor" id="cursor"></div>
   
       <script src="./portfolio.js"></script>
 
-    <div class="cursor" id="cursor"></div>
   
 </body>
 </html>
