--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
             <div class="project-image">
                 <img src="boat.jpg" alt="Lake Garda Boating">
                 <div class="project-overlay">
-                    <h3>Lake garda Boating</h3>
+                    <h3>Lake Garda Boating</h3>
                     <p>Coming Soon</p>
                 </div>
             </div>
@@ -68,9 +68,9 @@
         </div>
         <div class="project">
             <div class="project-image">
-                <img src="project4.jpg" alt=" Cappadocia Cave Hotels">
+                <img src="cappadocia.jpg" alt=" Cappadocia Cave Hotels">
                 <div class="project-overlay">
-                    <h3>Cappadocia Cav Hotels</h3>
+                    <h3>Cappadocia Cave Hotels</h3>
                     <p>Coming Soon</p>
                 </div>
             </div>
