--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
     <main>
 
 <section class="projects-container">
-    <h1>My Projects</h1>
+    <h1>My Upcoming Projects</h1>
     <br>
     <br>
     <div class="projects-grid">
@@ -96,10 +96,11 @@
     </div>
     <br>
     <br>
+        <div class="cursor" id="cursor"></div>
+
 </footer>
 
 
-    <div class="cursor" id="cursor"></div>
   
       <script src="./portfolio.js"></script>
 
