--- a/xmascalendar.html
+++ b/xmascalendar.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Nia's Christmas Calendar</title>
     <link rel='stylesheet' href='calendarstyle.css'>
-    <link rel="icon" type="image/png" href="newsnowflake.png">
+    <link rel="icon" type="image/png" href="flavicon.png">
 </head>
 <body>
     <header>
