--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='portfolio.css'>
+      <link rel="icon" type="image/png" href="flavicon.png">
+
    
 </head>
 <body>
@@ -24,10 +26,11 @@
         </div>
         <nav class="nav-menu" id="navMenu">
             <ul>
-                <li><a href="#calendar">Calendar</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://https://niaaled.github.io/portfolio/xmascalendar.html">Calendar</a></li>
+                <li><a href="https://niaaled.github.io/portfolio/index.html">About</a></li>
+                <li><a href="https://niaaled.github.io/portfolio/projects.html">Projects</a></li>
+                <li><a href="https://niaaled.github.io/portfolio/contact.html">Contact</a></li>
+
             </ul>
         </nav>
     </header>
