--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
     
 
    <section id="contact">
-    <h1>Contact me below</h1>
-    <h2>Contact Me</h2>
+    <h1>Send me a message below</h1>
+   <br>
     <form id="contactForm">
         <input type="text" id="name" placeholder="Name" required>
         <input type="email" id="email" placeholder="Email" required>
