--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         </div>
         <nav class="nav-menu" id="navMenu">
             <ul>
-                <li><a href="https://https://niaaled.github.io/portfolio/xmascalendar.html">Calendar</a></li>
+                <li><a href="https://niaaled.github.io/portfolio/xmascalendar.html">Calendar</a></li>
                 <li><a href="https://niaaled.github.io/portfolio/index.html">About</a></li>
                 <li><a href="https://niaaled.github.io/portfolio/projects.html">Projects</a></li>
                 <li><a href="https://niaaled.github.io/portfolio/contact.html">Contact</a></li>
+
 
             </ul>
         </nav>
