--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='portfolio.css'>
       <link rel="icon" type="image/png" href="flavicon.png">
-
+    <title>Projects</title>
    
 </head>
 <body>
