--- a/projects.html
+++ b/projects.html
@@ -77,12 +77,11 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 
-
-       
-    </main>
+</main>
 <footer>
     <p>&copy; 2024 Nia Durna. All rights reserved.</p>
     <div class="social-links">
